// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElasticAgentCard props button 1`] = `
<EuiCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
    >
      Button
    </EuiButton>
  }
  href="/app/integrations/browse"
  image="/plugins/kibanaReact/assets/elastic_agent_card.svg"
  paddingSize="l"
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCard props href 1`] = `
<EuiCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
    >
      Button
    </EuiButton>
  }
  href="#"
  image="/plugins/kibanaReact/assets/elastic_agent_card.svg"
  paddingSize="l"
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCard props recommended 1`] = `
<EuiCard
  betaBadgeLabel="Recommended"
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
    >
      Add Elastic Agent
    </EuiButton>
  }
  href="/app/integrations/browse"
  image="/plugins/kibanaReact/assets/elastic_agent_card.svg"
  paddingSize="l"
  title="Add Elastic Agent"
/>
`;

exports[`ElasticAgentCard renders 1`] = `
<EuiCard
  description="Use Elastic Agent for a simple, unified way to collect data from your machines."
  footer={
    <EuiButton
      fill={true}
    >
      Add Elastic Agent
    </EuiButton>
  }
  href="/app/integrations/browse"
  image="/plugins/kibanaReact/assets/elastic_agent_card.svg"
  paddingSize="l"
  title="Add Elastic Agent"
/>
`;
